--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "gulp-concat": "^2.6.1",
     "gulp-imagemin": "^7.1.0",
     "gulp-sass": "^5.1.0",
-    "jquery": "^3.6.1"
+    "jquery": "^3.6.1",
+    "slick-carousel": "^1.8.1"
   },
   "dependencies": {
     "gulp-autoprefixer": "^8.0.0",
