--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp-uglify": "^3.0.2",
     "node-sass": "^7.0.1",
     "normalize.css": "^8.0.1",
+    "rateyo": "^2.3.2",
     "sass": "^1.54.8",
     "scss": "^0.2.4"
   }
